--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "bugs": {
     "url": "https://github.com/lukasdietrich/no-problem/issues"
   },
-  "homepage": "https://github.com/lukasdietrich/no-problem"
+  "homepage": "https://github.com/lukasdietrich/no-problem",
+  "dependencies": {
+    "express": "^4.13.1",
+    "octonode": "^0.7.1",
+    "sqlite3": "^3.0.9"
+  }
 }
