Added yargs dependency

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "express": "^4.13.1",
     "octonode": "^0.7.1",
-    "sqlite3": "^3.0.9"
+    "sqlite3": "^3.0.9",
+    "yargs": "^3.15.0"
   }
 }
