--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "express": "^4.13.1",
     "express-session": "^1.11.3",
+    "jade": "^1.11.0",
     "octonode": "^0.7.1",
     "passport": "^0.2.2",
     "passport-github2": "^0.1.9",
