--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.13.1",
     "express-session": "^1.11.3",
     "jade": "^1.11.0",
+    "lodash": "^3.10.0",
     "octonode": "^0.7.1",
     "passport": "^0.2.2",
     "passport-github2": "^0.1.9",
